@@ -1,3 +1,4 @@
+- Add `clboss-unmanage` command to suppress certain aspects of auto-management.
 - Fix `InitialRebalancer` bug (introduced in 0.11A) which completely disables it instead of throttling it.
 
 0.11A
